# image-processing

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_filters.sh
include/: Filters.h  Image.h  UI.h  Utilities.h  stb_image.h  stb_image_write.h
src/: DEFs.h  Filters.cpp  Filters.h  Image.cpp  Image.h  Photo.cpp  Photo.h  UI.cpp  UI.h  Utilities.cpp  Utilities.h
src/core/: Image.h  Photo.cpp
src/filters/: FilterDispatcher.cpp  Filters.cpp  Filters.h
src/ui/: UI.cpp  UI.h  UIConstants.cpp
src/utils/: Utilities.h
